# huaweicloud-sdk-python-v3

./: CHANGELOG.md  CHANGELOG_CN.md  OpenSourceSoftwareNotice.md  README.md  README_CN.md  README_ZH.md  VERSION  VulnerabilityFixingDescription.md
huaweicloud-sdk-all/: pyproject.toml  requirements.txt  setup.py
huaweicloud-sdk-codeartsrepo/: pyproject.toml  setup.py
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v3/: __init__.py  codeartsrepo_async_client.py  codeartsrepo_client.py
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v3/model/: __init__.py  add_deploy_key_request.py  add_deploy_key_request_body.py  add_deploy_key_response.py  add_deploy_key_v2_request.py  add_deploy_key_v2_response.py  add_hooks_request.py  add_hooks_response.py  add_protect_access_level.py  add_protect_branch_v2_request.py  add_protect_branch_v2_response.py  add_protect_request.py  add_protect_response.py  add_repo_members_request.py  add_repo_members_response.py  add_ssh_key_request.py  add_ssh_key_request_body.py  add_ssh_key_response.py  add_tag_v2_request.py  add_tag_v2_response.py  add_tags_request.py  add_tags_response.py  approval_action_type_dto.py  approval_merge_request_approvers_item.py  approval_user_dto.py  approver_basic_dto.py  associate_issues_request.py  associate_issues_request_body.py  associate_issues_response.py  author.py  branch.py  branch_list.py  branch_response.py  branches_item.py  category_dto.py  commit.py  commit_action.py  commit_info.py  commit_list.py  commit_repo_v2.py  (+209 more)
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v3/region/: codeartsrepo_region.py
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v4/: __init__.py  codeartsrepo_async_client.py  codeartsrepo_client.py
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v4/model/: __init__.py  action_dto.py  add_group_webhook_request.py  add_group_webhook_response.py  add_project_webhook_request.py  add_project_webhook_response.py  add_repository_members_request.py  add_repository_members_response.py  add_repository_webhook_request.py  add_repository_webhook_response.py  add_ssh_key_request.py  add_ssh_key_response.py  add_submodule_request.py  add_submodule_response.py  add_tenant_trusted_ip_address_request.py  add_tenant_trusted_ip_address_response.py  add_trusted_ip_address_request.py  add_trusted_ip_address_request_body.py  add_trusted_ip_address_response.py  approval_action_type_dto.py  approval_approver_info_dto.py  approval_merge_request_request.py  approval_merge_request_response.py  approval_reviewer_info_dto.py  approval_user_dto.py  approver_basic_dto.py  approver_param_dto.py  associate_group_user_group_request.py  associate_group_user_group_response.py  associate_remote_mirror_request.py  associate_remote_mirror_response.py  associate_repository_user_group_request.py  associate_repository_user_group_response.py  base_event_dto.py  base_job_dto.py  basic_repository_dto.py  basic_role_dto.py  batch_create_protected_branch_request.py  batch_create_protected_branch_response.py  batch_create_protected_tags_request.py  (+898 more)
huaweicloud-sdk-codeartsrepo/huaweicloudsdkcodeartsrepo/v4/region/: codeartsrepo_region.py
huaweicloud-sdk-core/: output.json  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
huaweicloud-sdk-core/huaweicloudsdkcore/: __init__.py  client.py  sdk_request.py  sdk_response.py  sdk_stream_request.py  sdk_stream_response.py
huaweicloud-sdk-core/huaweicloudsdkcore/auth/: cache.py  credentials.py  endpoint.py  helper.py  iam.py  iam_service.py  internal.py  provider.py
huaweicloud-sdk-core/huaweicloudsdkcore/exceptions/: exception_handler.py  exceptions.py
huaweicloud-sdk-core/huaweicloudsdkcore/exchange/: api_reference.py  exchange.py
huaweicloud-sdk-core/huaweicloudsdkcore/http/: bson_types.py  formdata.py  future_session.py  http_client.py  http_config.py  http_handler.py  primitive_types.py  progress.py  user_agent.py
huaweicloud-sdk-core/huaweicloudsdkcore/invoker/: invoker.py
huaweicloud-sdk-core/huaweicloudsdkcore/region/: cache.py  provider.py  region.py
huaweicloud-sdk-core/huaweicloudsdkcore/retry/: backoff_strategy.py
huaweicloud-sdk-core/huaweicloudsdkcore/signer/: algorithm.py  gm.py  hkdf.py  signer.py  sm3.py  utils.py
huaweicloud-sdk-core/huaweicloudsdkcore/utils/: core_utils.py  filepath_utils.py  http_utils.py  path_utils.py  six_utils.py  string_utils.py  time_utils.py  xml_utils.py
huaweicloud-sdk-core/huaweicloudsdkcore/warning/: warning.py
huaweicloud-sdk-core/tests/: .coveragerc  test_client.py  test_client_build.py  test_credential_provider.py  test_credentials.py  test_endpoint_without_scheme.py  test_exceptions.py  test_exchange.py  test_extract_error_message.py  test_federal_credentials.py  test_http_config.py  test_iam_endpoints.py  test_invoker.py  test_new_region.py  test_parse_body.py  test_region_provider.py  test_region_with_project_id.py  test_region_without_project_id.py  test_request_and_exceptions.py  test_sdk_response.py  test_signer.py  test_string_utils.py  test_upload_download.py  test_user_agent.py  test_xml_transfer.py
huaweicloud-sdk-core/tests/data/: file_response_mocker.py  project_response_mocker.py  test.txt  test_token.txt
huaweicloud-sdk-core/tests/data/dicts/: AccessControlPolicy.json  BucketLoggingStatus.json  InventoryConfiguration.json  LifecycleConfiguration.json  ListAllMyBucketsResult.json  ListAllMyBucketsResult1.json  ListVersionsResult.json  (+6 more)
huaweicloud-sdk-core/tests/mocker/: file_response_mocker.py
huaweicloud-sdk-core/tests/util/: response_registry.py
huaweicloud-sdk-core/tests/vpc/: __init__.py  list_vpcs_response.py  route.py  vpc.py
huaweicloud-sdk-gaussdbfornosql/: pyproject.toml  requirements.txt  setup.py
huaweicloud-sdk-gaussdbfornosql/huaweicloudsdkgaussdbfornosql/v3/: __init__.py  gaussdbfornosql_async_client.py  gaussdbfornosql_client.py
huaweicloud-sdk-iotanalytics/: pyproject.toml  setup.py
huaweicloud-sdk-iotanalytics/huaweicloudsdkiotanalytics/v1/: __init__.py  iotanalytics_async_client.py  iotanalytics_client.py
(+58423 files in other folders)
