[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huaweicloudsdkall"
version = "3.1.198"
description = "HuaweiCloud SDK Python All"
readme = "README_PYPI.md"
authors = [
    { name = "HuaweiCloud SDK", email = "hwcloudsdk@huawei.com" }
]
license = "Apache-2.0"
requires-python = ">=3.6"
keywords = ["huaweicloud", "sdk", "all"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development"
]
dependencies = [
    "huaweicloudsdkaad==3.1.198",
    "huaweicloudsdkagentidentity==3.1.198",
    "huaweicloudsdkantiddos==3.1.198",
    "huaweicloudsdkaom==3.1.198",
    "huaweicloudsdkaos==3.1.198",
    "huaweicloudsdkapig==3.1.198",
    "huaweicloudsdkapm==3.1.198",
    "huaweicloudsdkas==3.1.198",
    "huaweicloudsdkasm==3.1.198",
    "huaweicloudsdkastrozero==3.1.198",
    "huaweicloudsdkbcc==3.1.198",
    "huaweicloudsdkbcs==3.1.198",
    "huaweicloudsdkbms==3.1.198",
    "huaweicloudsdkbss==3.1.198",
    "huaweicloudsdkbssintl==3.1.198",
    "huaweicloudsdkcae==3.1.198",
    "huaweicloudsdkcampusgo==3.1.198",
    "huaweicloudsdkcbh==3.1.198",
    "huaweicloudsdkcbr==3.1.198",
    "huaweicloudsdkcbs==3.1.198",
    "huaweicloudsdkcc==3.1.198",
    "huaweicloudsdkcce==3.1.198",
    "huaweicloudsdkccm==3.1.198",
    "huaweicloudsdkcdm==3.1.198",
    "huaweicloudsdkcdn==3.1.198",
    "huaweicloudsdkces==3.1.198",
    "huaweicloudsdkcfw==3.1.198",
    "huaweicloudsdkclassroom==3.1.198",
    "huaweicloudsdkclouddc==3.1.198",
    "huaweicloudsdkcloudide==3.1.198",
    "huaweicloudsdkcloudpond==3.1.198",
    "huaweicloudsdkcloudrtc==3.1.198",
    "huaweicloudsdkcloudtable==3.1.198",
    "huaweicloudsdkcloudtest==3.1.198",
    "huaweicloudsdkcoc==3.1.198",
    "huaweicloudsdkcodeartsartifact==3.1.198",
    "huaweicloudsdkcodeartsbuild==3.1.198",
    "huaweicloudsdkcodeartscheck==3.1.198",
    "huaweicloudsdkcodeartsdeploy==3.1.198",
    "huaweicloudsdkcodeartsgovernance==3.1.198",
    "huaweicloudsdkcodeartside==3.1.198",
    "huaweicloudsdkcodeartsinspector==3.1.198",
    "huaweicloudsdkcodeartspipeline==3.1.198",
    "huaweicloudsdkcodeartsrepo==3.1.198",
    "huaweicloudsdkcodecraft==3.1.198",
    "huaweicloudsdkconfig==3.1.198",
    "huaweicloudsdkcpcs==3.1.198",
    "huaweicloudsdkcph==3.1.198",
    "huaweicloudsdkcpts==3.1.198",
    "huaweicloudsdkcse==3.1.198",
    "huaweicloudsdkcsms==3.1.198",
    "huaweicloudsdkcss==3.1.198",
    "huaweicloudsdkcts==3.1.198",
    "huaweicloudsdkdas==3.1.198",
    "huaweicloudsdkdataartsfabric==3.1.198",
    "huaweicloudsdkdataartsfabricep==3.1.198",
    "huaweicloudsdkdataartsstudio==3.1.198",
    "huaweicloudsdkdbss==3.1.198",
    "huaweicloudsdkdc==3.1.198",
    "huaweicloudsdkdcc==3.1.198",
    "huaweicloudsdkdcos==3.1.198",
    "huaweicloudsdkdcs==3.1.198",
    "huaweicloudsdkddm==3.1.198",
    "huaweicloudsdkdds==3.1.198",
    "huaweicloudsdkdeh==3.1.198",
    "huaweicloudsdkdevstar==3.1.198",
    "huaweicloudsdkdgc==3.1.198",
    "huaweicloudsdkdis==3.1.198",
    "huaweicloudsdkdlf==3.1.198",
    "huaweicloudsdkdli==3.1.198",
    "huaweicloudsdkdns==3.1.198",
    "huaweicloudsdkdris==3.1.198",
    "huaweicloudsdkdrs==3.1.198",
    "huaweicloudsdkdsc==3.1.198",
    "huaweicloudsdkdwr==3.1.198",
    "huaweicloudsdkdws==3.1.198",
    "huaweicloudsdkec==3.1.198",
    "huaweicloudsdkecs==3.1.198",
    "huaweicloudsdkedgesec==3.1.198",
    "huaweicloudsdkeg==3.1.198",
    "huaweicloudsdkeihealth==3.1.198",
    "huaweicloudsdkeip==3.1.198",
    "huaweicloudsdkelb==3.1.198",
    "huaweicloudsdkeps==3.1.198",
    "huaweicloudsdker==3.1.198",
    "huaweicloudsdkesw==3.1.198",
    "huaweicloudsdkevs==3.1.198",
    "huaweicloudsdkfrs==3.1.198",
    "huaweicloudsdkfunctiongraph==3.1.198",
    "huaweicloudsdkga==3.1.198",
    "huaweicloudsdkgaussdb==3.1.198",
    "huaweicloudsdkgaussdbfornosql==3.1.198",
    "huaweicloudsdkgaussdbforopengauss==3.1.198",
    "huaweicloudsdkgeip==3.1.198",
    "huaweicloudsdkges==3.1.198",
    "huaweicloudsdkgsl==3.1.198",
    "huaweicloudsdkhilens==3.1.198",
    "huaweicloudsdkhss==3.1.198",
    "huaweicloudsdkiam==3.1.198",
    "huaweicloudsdkiamaccessanalyzer==3.1.198",
    "huaweicloudsdkidentitycenter==3.1.198",
    "huaweicloudsdkidentitycenteroidc==3.1.198",
    "huaweicloudsdkidentitycenterportalapi==3.1.198",
    "huaweicloudsdkidentitycenterscim==3.1.198",
    "huaweicloudsdkidentitycenterstore==3.1.198",
    "huaweicloudsdkidme==3.1.198",
    "huaweicloudsdkidmeclassicapi==3.1.198",
    "huaweicloudsdkiec==3.1.198",
    "huaweicloudsdkief==3.1.198",
    "huaweicloudsdkimage==3.1.198",
    "huaweicloudsdkimagesearch==3.1.198",
    "huaweicloudsdkims==3.1.198",
    "huaweicloudsdkiotanalytics==3.1.198",
    "huaweicloudsdkiotda==3.1.198",
    "huaweicloudsdkiotdm==3.1.198",
    "huaweicloudsdkiotedge==3.1.198",
    "huaweicloudsdkivs==3.1.198",
    "huaweicloudsdkkafka==3.1.198",
    "huaweicloudsdkkms==3.1.198",
    "huaweicloudsdkkoomessage==3.1.198",
    "huaweicloudsdkkps==3.1.198",
    "huaweicloudsdkkvs==3.1.198",
    "huaweicloudsdklakeformation==3.1.198",
    "huaweicloudsdklive==3.1.198",
    "huaweicloudsdklts==3.1.198",
    "huaweicloudsdkmapds==3.1.198",
    "huaweicloudsdkmas==3.1.198",
    "huaweicloudsdkmastudio==3.1.198",
    "huaweicloudsdkmeeting==3.1.198",
    "huaweicloudsdkmetastudio==3.1.198",
    "huaweicloudsdkmoderation==3.1.198",
    "huaweicloudsdkmpc==3.1.198",
    "huaweicloudsdkmrs==3.1.198",
    "huaweicloudsdkmsgsms==3.1.198",
    "huaweicloudsdkmssi==3.1.198",
    "huaweicloudsdknat==3.1.198",
    "huaweicloudsdknlp==3.1.198",
    "huaweicloudsdkobs==3.1.198",
    "huaweicloudsdkocr==3.1.198",
    "huaweicloudsdkoctopus==3.1.198",
    "huaweicloudsdkoms==3.1.198",
    "huaweicloudsdkoptverse==3.1.198",
    "huaweicloudsdkorganizations==3.1.198",
    "huaweicloudsdkorgid==3.1.198",
    "huaweicloudsdkoroas==3.1.198",
    "huaweicloudsdkosm==3.1.198",
    "huaweicloudsdkpangulargemodels==3.1.198",
    "huaweicloudsdkprojectman==3.1.198",
    "huaweicloudsdkrabbitmq==3.1.198",
    "huaweicloudsdkram==3.1.198",
    "huaweicloudsdkrds==3.1.198",
    "huaweicloudsdkres==3.1.198",
    "huaweicloudsdkrfs==3.1.198",
    "huaweicloudsdkrgc==3.1.198",
    "huaweicloudsdkrms==3.1.198",
    "huaweicloudsdkrocketmq==3.1.198",
    "huaweicloudsdkroma==3.1.198",
    "huaweicloudsdksa==3.1.198",
    "huaweicloudsdkscm==3.1.198",
    "huaweicloudsdksdrs==3.1.198",
    "huaweicloudsdksecmaster==3.1.198",
    "huaweicloudsdkservicestage==3.1.198",
    "huaweicloudsdksfsturbo==3.1.198",
    "huaweicloudsdksis==3.1.198",
    "huaweicloudsdksmn==3.1.198",
    "huaweicloudsdksmnglobal==3.1.198",
    "huaweicloudsdksms==3.1.198",
    "huaweicloudsdksmsapi==3.1.198",
    "huaweicloudsdksts==3.1.198",
    "huaweicloudsdkswr==3.1.198",
    "huaweicloudsdktics==3.1.198",
    "huaweicloudsdktms==3.1.198",
    "huaweicloudsdkucs==3.1.198",
    "huaweicloudsdkugo==3.1.198",
    "huaweicloudsdkvas==3.1.198",
    "huaweicloudsdkvcm==3.1.198",
    "huaweicloudsdkversatile==3.1.198",
    "huaweicloudsdkvod==3.1.198",
    "huaweicloudsdkvpc==3.1.198",
    "huaweicloudsdkvpcep==3.1.198",
    "huaweicloudsdkvpn==3.1.198",
    "huaweicloudsdkwaf==3.1.198",
    "huaweicloudsdkworkspace==3.1.198",
    "huaweicloudsdkworkspaceapp==3.1.198"
]

[project.urls]
Homepage = "https://github.com/huaweicloud/huaweicloud-sdk-python-v3"