[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huaweicloudsdkall"
version = "3.1.205"
description = "HuaweiCloud SDK Python All"
readme = "README_PYPI.md"
authors = [
    { name = "HuaweiCloud SDK", email = "hwcloudsdk@huawei.com" }
]
license = "Apache-2.0"
requires-python = ">=3.6"
keywords = ["huaweicloud", "sdk", "all"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development"
]
dependencies = [
    "huaweicloudsdkaad==3.1.205",
    "huaweicloudsdkagentarts==3.1.205",
    "huaweicloudsdkagentidentity==3.1.205",
    "huaweicloudsdkantiddos==3.1.205",
    "huaweicloudsdkaom==3.1.205",
    "huaweicloudsdkaos==3.1.205",
    "huaweicloudsdkapig==3.1.205",
    "huaweicloudsdkapm==3.1.205",
    "huaweicloudsdkas==3.1.205",
    "huaweicloudsdkasm==3.1.205",
    "huaweicloudsdkastrozero==3.1.205",
    "huaweicloudsdkbcc==3.1.205",
    "huaweicloudsdkbcs==3.1.205",
    "huaweicloudsdkbms==3.1.205",
    "huaweicloudsdkbss==3.1.205",
    "huaweicloudsdkbssintl==3.1.205",
    "huaweicloudsdkcae==3.1.205",
    "huaweicloudsdkcampusgo==3.1.205",
    "huaweicloudsdkcbh==3.1.205",
    "huaweicloudsdkcbr==3.1.205",
    "huaweicloudsdkcbs==3.1.205",
    "huaweicloudsdkcc==3.1.205",
    "huaweicloudsdkcce==3.1.205",
    "huaweicloudsdkccm==3.1.205",
    "huaweicloudsdkcdm==3.1.205",
    "huaweicloudsdkcdn==3.1.205",
    "huaweicloudsdkces==3.1.205",
    "huaweicloudsdkcfw==3.1.205",
    "huaweicloudsdkclassroom==3.1.205",
    "huaweicloudsdkclouddc==3.1.205",
    "huaweicloudsdkcloudide==3.1.205",
    "huaweicloudsdkcloudpond==3.1.205",
    "huaweicloudsdkcloudrtc==3.1.205",
    "huaweicloudsdkcloudtable==3.1.205",
    "huaweicloudsdkcloudtest==3.1.205",
    "huaweicloudsdkcoc==3.1.205",
    "huaweicloudsdkcodeartsartifact==3.1.205",
    "huaweicloudsdkcodeartsbuild==3.1.205",
    "huaweicloudsdkcodeartscheck==3.1.205",
    "huaweicloudsdkcodeartsdeploy==3.1.205",
    "huaweicloudsdkcodeartsgovernance==3.1.205",
    "huaweicloudsdkcodeartside==3.1.205",
    "huaweicloudsdkcodeartsinspector==3.1.205",
    "huaweicloudsdkcodeartspipeline==3.1.205",
    "huaweicloudsdkcodeartsrepo==3.1.205",
    "huaweicloudsdkcodecraft==3.1.205",
    "huaweicloudsdkconfig==3.1.205",
    "huaweicloudsdkcpcs==3.1.205",
    "huaweicloudsdkcph==3.1.205",
    "huaweicloudsdkcpts==3.1.205",
    "huaweicloudsdkcse==3.1.205",
    "huaweicloudsdkcsms==3.1.205",
    "huaweicloudsdkcss==3.1.205",
    "huaweicloudsdkcts==3.1.205",
    "huaweicloudsdkdas==3.1.205",
    "huaweicloudsdkdataartsfabric==3.1.205",
    "huaweicloudsdkdataartsfabricep==3.1.205",
    "huaweicloudsdkdataartsstudio==3.1.205",
    "huaweicloudsdkdbss==3.1.205",
    "huaweicloudsdkdc==3.1.205",
    "huaweicloudsdkdcc==3.1.205",
    "huaweicloudsdkdcos==3.1.205",
    "huaweicloudsdkdcs==3.1.205",
    "huaweicloudsdkddm==3.1.205",
    "huaweicloudsdkdds==3.1.205",
    "huaweicloudsdkdeh==3.1.205",
    "huaweicloudsdkdevstar==3.1.205",
    "huaweicloudsdkdgc==3.1.205",
    "huaweicloudsdkdis==3.1.205",
    "huaweicloudsdkdlf==3.1.205",
    "huaweicloudsdkdli==3.1.205",
    "huaweicloudsdkdns==3.1.205",
    "huaweicloudsdkdris==3.1.205",
    "huaweicloudsdkdrs==3.1.205",
    "huaweicloudsdkdsc==3.1.205",
    "huaweicloudsdkdwr==3.1.205",
    "huaweicloudsdkdws==3.1.205",
    "huaweicloudsdkec==3.1.205",
    "huaweicloudsdkecs==3.1.205",
    "huaweicloudsdkedgesec==3.1.205",
    "huaweicloudsdkeg==3.1.205",
    "huaweicloudsdkeihealth==3.1.205",
    "huaweicloudsdkeip==3.1.205",
    "huaweicloudsdkelb==3.1.205",
    "huaweicloudsdkeps==3.1.205",
    "huaweicloudsdker==3.1.205",
    "huaweicloudsdkesw==3.1.205",
    "huaweicloudsdkevs==3.1.205",
    "huaweicloudsdkfrs==3.1.205",
    "huaweicloudsdkfunctiongraph==3.1.205",
    "huaweicloudsdkga==3.1.205",
    "huaweicloudsdkgaussdb==3.1.205",
    "huaweicloudsdkgaussdbfornosql==3.1.205",
    "huaweicloudsdkgaussdbforopengauss==3.1.205",
    "huaweicloudsdkgeip==3.1.205",
    "huaweicloudsdkges==3.1.205",
    "huaweicloudsdkgsl==3.1.205",
    "huaweicloudsdkhilens==3.1.205",
    "huaweicloudsdkhss==3.1.205",
    "huaweicloudsdkiam==3.1.205",
    "huaweicloudsdkiamaccessanalyzer==3.1.205",
    "huaweicloudsdkidentitycenter==3.1.205",
    "huaweicloudsdkidentitycenteroidc==3.1.205",
    "huaweicloudsdkidentitycenterportalapi==3.1.205",
    "huaweicloudsdkidentitycenterscim==3.1.205",
    "huaweicloudsdkidentitycenterstore==3.1.205",
    "huaweicloudsdkidme==3.1.205",
    "huaweicloudsdkidmeclassicapi==3.1.205",
    "huaweicloudsdkiec==3.1.205",
    "huaweicloudsdkief==3.1.205",
    "huaweicloudsdkimage==3.1.205",
    "huaweicloudsdkimagesearch==3.1.205",
    "huaweicloudsdkims==3.1.205",
    "huaweicloudsdkiotanalytics==3.1.205",
    "huaweicloudsdkiotda==3.1.205",
    "huaweicloudsdkiotdm==3.1.205",
    "huaweicloudsdkiotedge==3.1.205",
    "huaweicloudsdkivs==3.1.205",
    "huaweicloudsdkkafka==3.1.205",
    "huaweicloudsdkkms==3.1.205",
    "huaweicloudsdkkoomessage==3.1.205",
    "huaweicloudsdkkps==3.1.205",
    "huaweicloudsdkkvs==3.1.205",
    "huaweicloudsdklakeformation==3.1.205",
    "huaweicloudsdklive==3.1.205",
    "huaweicloudsdklts==3.1.205",
    "huaweicloudsdkmapds==3.1.205",
    "huaweicloudsdkmas==3.1.205",
    "huaweicloudsdkmastudio==3.1.205",
    "huaweicloudsdkmeeting==3.1.205",
    "huaweicloudsdkmetastudio==3.1.205",
    "huaweicloudsdkmoderation==3.1.205",
    "huaweicloudsdkmpc==3.1.205",
    "huaweicloudsdkmrs==3.1.205",
    "huaweicloudsdkmsgsms==3.1.205",
    "huaweicloudsdkmssi==3.1.205",
    "huaweicloudsdknat==3.1.205",
    "huaweicloudsdknlp==3.1.205",
    "huaweicloudsdkobs==3.1.205",
    "huaweicloudsdkocr==3.1.205",
    "huaweicloudsdkoctopus==3.1.205",
    "huaweicloudsdkoms==3.1.205",
    "huaweicloudsdkoptverse==3.1.205",
    "huaweicloudsdkorganizations==3.1.205",
    "huaweicloudsdkorgid==3.1.205",
    "huaweicloudsdkoroas==3.1.205",
    "huaweicloudsdkosm==3.1.205",
    "huaweicloudsdkpangulargemodels==3.1.205",
    "huaweicloudsdkprojectman==3.1.205",
    "huaweicloudsdkrabbitmq==3.1.205",
    "huaweicloudsdkram==3.1.205",
    "huaweicloudsdkrds==3.1.205",
    "huaweicloudsdkres==3.1.205",
    "huaweicloudsdkrfs==3.1.205",
    "huaweicloudsdkrgc==3.1.205",
    "huaweicloudsdkrms==3.1.205",
    "huaweicloudsdkrocketmq==3.1.205",
    "huaweicloudsdkroma==3.1.205",
    "huaweicloudsdksa==3.1.205",
    "huaweicloudsdkscm==3.1.205",
    "huaweicloudsdksdrs==3.1.205",
    "huaweicloudsdksecmaster==3.1.205",
    "huaweicloudsdkservicestage==3.1.205",
    "huaweicloudsdksfsturbo==3.1.205",
    "huaweicloudsdksis==3.1.205",
    "huaweicloudsdksmn==3.1.205",
    "huaweicloudsdksmnglobal==3.1.205",
    "huaweicloudsdksms==3.1.205",
    "huaweicloudsdksmsapi==3.1.205",
    "huaweicloudsdksts==3.1.205",
    "huaweicloudsdkswr==3.1.205",
    "huaweicloudsdktics==3.1.205",
    "huaweicloudsdktms==3.1.205",
    "huaweicloudsdkucs==3.1.205",
    "huaweicloudsdkugo==3.1.205",
    "huaweicloudsdkvas==3.1.205",
    "huaweicloudsdkvcm==3.1.205",
    "huaweicloudsdkversatile==3.1.205",
    "huaweicloudsdkvod==3.1.205",
    "huaweicloudsdkvpc==3.1.205",
    "huaweicloudsdkvpcep==3.1.205",
    "huaweicloudsdkvpn==3.1.205",
    "huaweicloudsdkwaf==3.1.205",
    "huaweicloudsdkworkspace==3.1.205",
    "huaweicloudsdkworkspaceapp==3.1.205"
]

[project.urls]
Homepage = "https://github.com/huaweicloud/huaweicloud-sdk-python-v3"