[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huaweicloudsdkall"
version = "3.1.207"
description = "HuaweiCloud SDK Python All"
readme = "README_PYPI.md"
authors = [
    { name = "HuaweiCloud SDK", email = "hwcloudsdk@huawei.com" }
]
license = "Apache-2.0"
requires-python = ">=3.6"
keywords = ["huaweicloud", "sdk", "all"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development"
]
dependencies = [
    "huaweicloudsdkaad==3.1.207",
    "huaweicloudsdkagentarts==3.1.207",
    "huaweicloudsdkagentidentity==3.1.207",
    "huaweicloudsdkantiddos==3.1.207",
    "huaweicloudsdkaom==3.1.207",
    "huaweicloudsdkaos==3.1.207",
    "huaweicloudsdkapig==3.1.207",
    "huaweicloudsdkapm==3.1.207",
    "huaweicloudsdkas==3.1.207",
    "huaweicloudsdkasm==3.1.207",
    "huaweicloudsdkastrozero==3.1.207",
    "huaweicloudsdkbcc==3.1.207",
    "huaweicloudsdkbcs==3.1.207",
    "huaweicloudsdkbms==3.1.207",
    "huaweicloudsdkbss==3.1.207",
    "huaweicloudsdkbssintl==3.1.207",
    "huaweicloudsdkcae==3.1.207",
    "huaweicloudsdkcampusgo==3.1.207",
    "huaweicloudsdkcbh==3.1.207",
    "huaweicloudsdkcbr==3.1.207",
    "huaweicloudsdkcbs==3.1.207",
    "huaweicloudsdkcc==3.1.207",
    "huaweicloudsdkcce==3.1.207",
    "huaweicloudsdkccm==3.1.207",
    "huaweicloudsdkcdm==3.1.207",
    "huaweicloudsdkcdn==3.1.207",
    "huaweicloudsdkces==3.1.207",
    "huaweicloudsdkcfw==3.1.207",
    "huaweicloudsdkclassroom==3.1.207",
    "huaweicloudsdkclouddc==3.1.207",
    "huaweicloudsdkcloudide==3.1.207",
    "huaweicloudsdkcloudpond==3.1.207",
    "huaweicloudsdkcloudrtc==3.1.207",
    "huaweicloudsdkcloudtable==3.1.207",
    "huaweicloudsdkcloudtest==3.1.207",
    "huaweicloudsdkcoc==3.1.207",
    "huaweicloudsdkcodeartsartifact==3.1.207",
    "huaweicloudsdkcodeartsbuild==3.1.207",
    "huaweicloudsdkcodeartscheck==3.1.207",
    "huaweicloudsdkcodeartsdeploy==3.1.207",
    "huaweicloudsdkcodeartsgovernance==3.1.207",
    "huaweicloudsdkcodeartside==3.1.207",
    "huaweicloudsdkcodeartsinspector==3.1.207",
    "huaweicloudsdkcodeartspipeline==3.1.207",
    "huaweicloudsdkcodeartsrepo==3.1.207",
    "huaweicloudsdkcodecraft==3.1.207",
    "huaweicloudsdkconfig==3.1.207",
    "huaweicloudsdkcpcs==3.1.207",
    "huaweicloudsdkcph==3.1.207",
    "huaweicloudsdkcpts==3.1.207",
    "huaweicloudsdkcse==3.1.207",
    "huaweicloudsdkcsms==3.1.207",
    "huaweicloudsdkcss==3.1.207",
    "huaweicloudsdkcts==3.1.207",
    "huaweicloudsdkdas==3.1.207",
    "huaweicloudsdkdataartsfabric==3.1.207",
    "huaweicloudsdkdataartsfabricep==3.1.207",
    "huaweicloudsdkdataartsstudio==3.1.207",
    "huaweicloudsdkdbss==3.1.207",
    "huaweicloudsdkdc==3.1.207",
    "huaweicloudsdkdcc==3.1.207",
    "huaweicloudsdkdcos==3.1.207",
    "huaweicloudsdkdcs==3.1.207",
    "huaweicloudsdkddm==3.1.207",
    "huaweicloudsdkdds==3.1.207",
    "huaweicloudsdkdeh==3.1.207",
    "huaweicloudsdkdevstar==3.1.207",
    "huaweicloudsdkdgc==3.1.207",
    "huaweicloudsdkdis==3.1.207",
    "huaweicloudsdkdlf==3.1.207",
    "huaweicloudsdkdli==3.1.207",
    "huaweicloudsdkdns==3.1.207",
    "huaweicloudsdkdris==3.1.207",
    "huaweicloudsdkdrs==3.1.207",
    "huaweicloudsdkdsc==3.1.207",
    "huaweicloudsdkdwr==3.1.207",
    "huaweicloudsdkdws==3.1.207",
    "huaweicloudsdkec==3.1.207",
    "huaweicloudsdkecs==3.1.207",
    "huaweicloudsdkedgesec==3.1.207",
    "huaweicloudsdkeg==3.1.207",
    "huaweicloudsdkeihealth==3.1.207",
    "huaweicloudsdkeip==3.1.207",
    "huaweicloudsdkelb==3.1.207",
    "huaweicloudsdkeps==3.1.207",
    "huaweicloudsdker==3.1.207",
    "huaweicloudsdkesw==3.1.207",
    "huaweicloudsdkevs==3.1.207",
    "huaweicloudsdkfrs==3.1.207",
    "huaweicloudsdkfunctiongraph==3.1.207",
    "huaweicloudsdkga==3.1.207",
    "huaweicloudsdkgaussdb==3.1.207",
    "huaweicloudsdkgaussdbfornosql==3.1.207",
    "huaweicloudsdkgaussdbforopengauss==3.1.207",
    "huaweicloudsdkgeip==3.1.207",
    "huaweicloudsdkges==3.1.207",
    "huaweicloudsdkgsl==3.1.207",
    "huaweicloudsdkhilens==3.1.207",
    "huaweicloudsdkhss==3.1.207",
    "huaweicloudsdkiam==3.1.207",
    "huaweicloudsdkiamaccessanalyzer==3.1.207",
    "huaweicloudsdkidentitycenter==3.1.207",
    "huaweicloudsdkidentitycenteroidc==3.1.207",
    "huaweicloudsdkidentitycenterportalapi==3.1.207",
    "huaweicloudsdkidentitycenterscim==3.1.207",
    "huaweicloudsdkidentitycenterstore==3.1.207",
    "huaweicloudsdkidme==3.1.207",
    "huaweicloudsdkidmeclassicapi==3.1.207",
    "huaweicloudsdkiec==3.1.207",
    "huaweicloudsdkief==3.1.207",
    "huaweicloudsdkimage==3.1.207",
    "huaweicloudsdkimagesearch==3.1.207",
    "huaweicloudsdkims==3.1.207",
    "huaweicloudsdkiotanalytics==3.1.207",
    "huaweicloudsdkiotda==3.1.207",
    "huaweicloudsdkiotdm==3.1.207",
    "huaweicloudsdkiotedge==3.1.207",
    "huaweicloudsdkivs==3.1.207",
    "huaweicloudsdkkafka==3.1.207",
    "huaweicloudsdkkms==3.1.207",
    "huaweicloudsdkkoomessage==3.1.207",
    "huaweicloudsdkkps==3.1.207",
    "huaweicloudsdkkvs==3.1.207",
    "huaweicloudsdklakeformation==3.1.207",
    "huaweicloudsdklive==3.1.207",
    "huaweicloudsdklts==3.1.207",
    "huaweicloudsdkmapds==3.1.207",
    "huaweicloudsdkmas==3.1.207",
    "huaweicloudsdkmastudio==3.1.207",
    "huaweicloudsdkmeeting==3.1.207",
    "huaweicloudsdkmetastudio==3.1.207",
    "huaweicloudsdkmodelarts==3.1.207",
    "huaweicloudsdkmoderation==3.1.207",
    "huaweicloudsdkmpc==3.1.207",
    "huaweicloudsdkmrs==3.1.207",
    "huaweicloudsdkmsgsms==3.1.207",
    "huaweicloudsdkmssi==3.1.207",
    "huaweicloudsdknat==3.1.207",
    "huaweicloudsdknlp==3.1.207",
    "huaweicloudsdkobs==3.1.207",
    "huaweicloudsdkocr==3.1.207",
    "huaweicloudsdkoctopus==3.1.207",
    "huaweicloudsdkoms==3.1.207",
    "huaweicloudsdkoptverse==3.1.207",
    "huaweicloudsdkorganizations==3.1.207",
    "huaweicloudsdkorgid==3.1.207",
    "huaweicloudsdkoroas==3.1.207",
    "huaweicloudsdkosm==3.1.207",
    "huaweicloudsdkpangulargemodels==3.1.207",
    "huaweicloudsdkprojectman==3.1.207",
    "huaweicloudsdkrabbitmq==3.1.207",
    "huaweicloudsdkram==3.1.207",
    "huaweicloudsdkrds==3.1.207",
    "huaweicloudsdkres==3.1.207",
    "huaweicloudsdkrfs==3.1.207",
    "huaweicloudsdkrgc==3.1.207",
    "huaweicloudsdkrms==3.1.207",
    "huaweicloudsdkrocketmq==3.1.207",
    "huaweicloudsdkroma==3.1.207",
    "huaweicloudsdksa==3.1.207",
    "huaweicloudsdkscm==3.1.207",
    "huaweicloudsdksdrs==3.1.207",
    "huaweicloudsdksecmaster==3.1.207",
    "huaweicloudsdkservicestage==3.1.207",
    "huaweicloudsdksfsturbo==3.1.207",
    "huaweicloudsdksis==3.1.207",
    "huaweicloudsdksmn==3.1.207",
    "huaweicloudsdksmnglobal==3.1.207",
    "huaweicloudsdksms==3.1.207",
    "huaweicloudsdksmsapi==3.1.207",
    "huaweicloudsdksts==3.1.207",
    "huaweicloudsdkswr==3.1.207",
    "huaweicloudsdktics==3.1.207",
    "huaweicloudsdktms==3.1.207",
    "huaweicloudsdkucs==3.1.207",
    "huaweicloudsdkugo==3.1.207",
    "huaweicloudsdkvas==3.1.207",
    "huaweicloudsdkvcm==3.1.207",
    "huaweicloudsdkversatile==3.1.207",
    "huaweicloudsdkvod==3.1.207",
    "huaweicloudsdkvpc==3.1.207",
    "huaweicloudsdkvpcep==3.1.207",
    "huaweicloudsdkvpn==3.1.207",
    "huaweicloudsdkwaf==3.1.207",
    "huaweicloudsdkworkspace==3.1.207",
    "huaweicloudsdkworkspaceapp==3.1.207"
]

[project.urls]
Homepage = "https://github.com/huaweicloud/huaweicloud-sdk-python-v3"