[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huaweicloudsdkgaussdbfornosql"
version = "3.1.180"
description = "GaussDBforNoSQL"
readme = "README_PYPI.md"
authors = [
    { name = "HuaweiCloud SDK", email = "hwcloudsdk@huawei.com" }
]
license = "Apache-2.0"
requires-python = ">=3.6"
keywords = ["huaweicloud", "sdk", "GaussDBforNoSQL"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development"
]
dependencies = [
    "huaweicloudsdkcore>=3.1.180"
]

[project.urls]
Homepage = "https://github.com/huaweicloud/huaweicloud-sdk-python-v3"